# mati-test-stuff

ocaml/aoc/: aoc  aoc.opam  dune-project
ocaml/aoc/lib/: ex1.ml  ex2.ml  lib.ml
ocaml/hello/lib/: en.ml  en.mli
redis/c/: CMakeLists.txt  Taskfile.yml  client.c  lib.c  server.c  setup.c  test_vector.c  vector.c
