(lang dune 3.20)

(name aoc)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Mati")

(maintainers "Mati")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name aoc)
 (synopsis "Advent of code")
 (description "An Advent of code")
 (depends ocaml)
 (tags
  ("advent" "of" code)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
